objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Automate__c</fullName>
        <label>Automate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB__c</fullName>
        <label>DB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator__c</fullName>
        <label>Locator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <label>Main</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity__c</fullName>
        <label>Maturity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NB__c</fullName>
        <label>NB</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership__c</fullName>
        <label>Partnership</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation__c</fullName>
        <label>Reputation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>Salesforce CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreateContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to create Contracted Prices without creating a Contract.</description>
        <inlineHelpText>Select this checkbox to create Contracted Prices without creating a Contract.</inlineHelpText>
        <label>Create Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderGroupID__c</fullName>
        <description>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID. This is not a reference.</description>
        <inlineHelpText>The unique identifier for the Amend:Re-Quote transaction, which is the original primary quote&apos;s ID.</inlineHelpText>
        <label>Order Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag that drives automatic order creation.</description>
        <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
        <label>Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>Salesforce CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SK__c</fullName>
        <label>SK</label>
        <length>92</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <label>Success</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>